# MetricProducer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: metric_producer.hpp
lib/metric_producer/: CMakeLists.txt
lib/metric_producer/include/: metric_producer.hpp
lib/metric_producer/src/: metric_producer.cpp
src/: metric_producer.cpp
